refactor: downgrade to JVM 11